# ContextStore

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claudecode-redhare-handoff.md  redhare-kvservice-contract.md
kv-service/: .gitignore  Makefile
kv-service/benchmarks/: run_benchmark.py
kv-service/client-rs/: Cargo.toml  build.rs
kv-service/client-rs/src/: lib.rs  rdma.rs
kv-service/client-rs/tests/: rdma_e2e.rs
kv-service/configs/: README.md  server-nvmeof.toml  server-test.toml  server.toml
kv-service/deploy/: README.md
kv-service/deploy/docker/: Dockerfile  docker-compose.yml
kv-service/deploy/jbof/: initiator_connect.sh  initiator_disconnect.sh  spdk_target.sh
kv-service/deploy/k8s/: statefulset.yaml
kv-service/deploy/systemd/: contextstore-server.service
kv-service/gds-ffi/: Cargo.toml
kv-service/gds-ffi/src/: lib.rs
kv-service/proto/: kv_service.proto
kv-service/rdma-ffi/: Cargo.toml
kv-service/rdma-ffi/src/: lib.rs
kv-service/server/: Cargo.toml  build.rs
kv-service/server/src/: config.rs  error.rs  lib.rs  main.rs  memory_tier.rs  metadata.rs  metrics.rs  router.rs  storage_tier.rs
kv-service/server/src/api/: mod.rs  service.rs
kv-service/server/src/gds/: buffer.rs  driver.rs  ffi.rs  handle.rs  mod.rs
kv-service/server/src/io_executor/: aligned_buffer.rs  mod.rs  tier_a.rs  tier_b.rs
kv-service/server/src/rdma/: context.rs  mod.rs  qp.rs  server.rs  slab.rs  wire.rs
kv-service/server/tests/: gds_e2e.rs  redis_metadata_e2e.rs
kv-service/tests/: test_integration.py
nixl-plugin/contextstore/: CMakeLists.txt  README.md  contextstore_backend.cpp  contextstore_backend.h  contextstore_nixl_client.h  contextstore_plugin.cpp
nixl-plugin/contextstore/client-ffi/: Cargo.toml
nixl-plugin/contextstore/client-ffi/src/: lib.rs
nixl-plugin/contextstore/scripts/: nixl_contextstore_eviction.py  nixl_contextstore_roundtrip.py
src/contextstore/: __init__.py  async_io.py  connector.py  metadata.py
src/contextstore/core/: __init__.py  codec.py  config.py  engine.py  metrics.py
src/contextstore/index/: __init__.py  prefix_index.py  prefix_index_redis.py
src/contextstore/integrations/: __init__.py
src/contextstore/integrations/dynamo/: __init__.py  connector.py
src/contextstore/kvbm/: __init__.py  backend.py
src/contextstore/kvservice_client/: __init__.py  client.py  types.py
src/contextstore/kvservice_client/_pb/: __init__.py
src/contextstore/storage/: __init__.py  base.py  gds_client.py  ha_kvservice.py  host_memory.py  kvservice.py  local.py  memory.py  rdma_client.py  sharded.py
tests/: conftest.py
tests/unit/: test_codec.py  test_codec_binary.py  test_connector.py  test_connector_probe.py  test_dynamo_integration.py  test_engine.py  test_ha_kvservice.py  test_host_memory_backend.py  test_kvbm_backend.py  test_kvservice_backend.py  test_prefix_index.py  test_prefix_index_redis.py  test_sharded_storage.py  test_storage.py
