[package]
name = "contextstore-client-rs"
version = "0.1.0"
edition = "2021"
description = "ContextStore KV Service - Rust client SDK + benchmarks (companion to the Python client)"
license = "Apache-2.0"

[[bin]]
name = "cs-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "cs-rdma-bench"
path = "src/bin/rdma_bench.rs"
required-features = ["rdma"]

[dependencies]
# gRPC (versions aligned with the server)
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# CLI / timing
clap = { version = "4", features = ["derive"] }

# RDMA (enabled by the `rdma` feature)
rdma-sys = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
rdma = ["dep:rdma-sys", "dep:anyhow", "dep:libc"]

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
